--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_online_auction_app
+name: flutter_online_auction_app.
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
